# rust-bar

./: Cargo.toml  test.yaml  test.yml
src/: lib.rs  main.rs
