[package]
name = "i3status-bar"
version = "0.1.0"
authors = ["stew3254 <rtstewy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
handlebars = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
anyhow = "*"