[package]
name = "i3status-bar"
version = "0.1.0"
authors = ["stew3254 <rtstewy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
handlebars = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
serde_with = "1.6.0"
anyhow = "*"
sysinfo = "*"